[package]
name = "libreplex_nico"
version = "0.0.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libreplex/libreplex-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_nico"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}

solana-program = {version = "~1.17"}
arrayref = "0.3.7"
libreplex_shared = {version= "0.5.0", features=["no-entrypoint"] }
spl-token = {version = "~4.0", features = ["no-entrypoint"]}
spl-token-2022 = {version = "~1.0", features = ["no-entrypoint"]}
spl-token-metadata-interface = {version= "~0.2"}
spl-token-group-interface = {version= "0.1.0"}
spl-type-length-value = {version= "0.3.0"}
spl-associated-token-account = {version="~2"}
spl-pod = {version= "~0.1"}
nifty-asset = {version = "0.5.0"}
podded = "0.5.1"
bytemuck = "1.14"
mpl-core = "0.7.1"
num-derive = "^0.3"
num-traits = "^0.2"
thiserror = "^1.0"
nifty-asset-types = "0.3.0"
mpl-token-metadata = "~3"

[dev-dependencies]
solana-program-test = {version= "~1.17"}
solana-sdk= "~1.17"
spl-associated-token-account = "~2"

